# Toolmaster-of-Brainerd

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: project-structure.md
tests/unit/: test_toolmaster_of_brainerd.py
toolmaster_of_brainerd/: __init__.py  toolmaster_of_brainerd.py
toolmaster_of_brainerd/cli/: entrypoint.py
toolmaster_of_brainerd/templates/: board_template.scad
